--- a/SoftwareConfeccao/Telas/CadastroClientes.xaml
+++ b/SoftwareConfeccao/Telas/CadastroClientes.xaml
@@ -64,13 +64,13 @@
                     BackgroundColor="Transparent"
                     Clicked="OnApagarClienteClicked"/>
 
-            <Button Text="◀"
-                    HorizontalOptions="Start"
-                    VerticalOptions="EndAndExpand"
-                    Margin="0,10,0,0"
-                    BackgroundColor="#a1a1a1"
-                    TextColor="#FFFFFF"
-                    Clicked="OnVoltarCadastroClienteClicked"/>
+                    <ImageButton Source="volte.png"
+                            HorizontalOptions="StartAndExpand"
+                            VerticalOptions="End"
+                            BackgroundColor="Transparent"
+                            Clicked="OnVoltarCadastroClienteClicked"
+                            HeightRequest="35"/>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
