--- a/SoftwareConfeccao/Telas/ProdutoCadastro.xaml
+++ b/SoftwareConfeccao/Telas/ProdutoCadastro.xaml
@@ -64,12 +64,12 @@
                         BackgroundColor="Transparent"
                         Clicked="OnApagarProdutoClicked"/>
 
-                <Button Text="◀"
-                        HorizontalOptions="Start"
-                        VerticalOptions="EndAndExpand"
-                        Margin="0,10,0,0"
-                        BackgroundColor="#c2c2c2"
-                        Clicked="OnVoltarCadastroProdutoClicked"/>
+                    <ImageButton Source="volte.png"
+                            HorizontalOptions="StartAndExpand"
+                            VerticalOptions="End"
+                            BackgroundColor="Transparent"
+                            Clicked="OnVoltarCadastroProdutoClicked"
+                            HeightRequest="35"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
