--- a/SoftwareConfeccao/Telas/TransportadoraCadastro.xaml
+++ b/SoftwareConfeccao/Telas/TransportadoraCadastro.xaml
@@ -63,13 +63,12 @@
                     BackgroundColor="Transparent"
                     Clicked="OnApagarTransportadoraClicked"/>
 
-            <Button Text="◀"
-                    HorizontalOptions="Start"
-                    VerticalOptions="EndAndExpand"
-                    Margin="0,10,0,0"
-                    BackgroundColor="#a1a1a1"
-                    TextColor="#FFFFFF"
-                    Clicked="OnVoltarCadastroTransportadoraClicked"/>
+                    <ImageButton Source="volte.png"
+                            HorizontalOptions="StartAndExpand"
+                            VerticalOptions="End"
+                            BackgroundColor="Transparent"
+                            Clicked="OnVoltarCadastroTransportadoraClicked"
+                            HeightRequest="35"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
