--- a/SoftwareConfeccao/MainPage.xaml
+++ b/SoftwareConfeccao/MainPage.xaml
@@ -12,12 +12,13 @@
             </Grid.ColumnDefinitions>
 
             <ScrollView Orientation="Vertical"
-                        BackgroundColor="Black"
+                        BackgroundColor="White"
                         Padding="10">
                 <StackLayout>
 
                 <Image Source="logo.png"
-                       HeightRequest="200"/>
+                        VerticalOptions="Start"
+                       HeightRequest="250"/>
                 <BoxView HeightRequest="1"
                          BackgroundColor="#c2c2c2"
                          Margin="0,10,0,10"/>
